--- a/everyday/index.html
+++ b/everyday/index.html
@@ -5,4 +5,4 @@
           var t = n.getBoundingClientRect().width;
           return n.style.fontSize = 5 * Math.max(Math.min(t / 750 * 20, 11.2), 8.55) + "px", e
         }();
-    }(window);</script><link href=static/css/app.a8229dba6a0a2f37844b3ef92b1fd3f5.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=static/js/manifest.37a2ecbb1d1b7e6c9ada.js></script><script type=text/javascript src=static/js/vendor.701d8e000791bc829fac.js></script><script type=text/javascript src=static/js/app.219bf0d34dc38aec0b45.js></script></body></html>
+    }(window);</script><link href=./static/css/app.a8229dba6a0a2f37844b3ef92b1fd3f5.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=./static/js/manifest.3ad1d5771e9b13dbdad2.js></script><script type=text/javascript src=./static/js/vendor.701d8e000791bc829fac.js></script><script type=text/javascript src=./static/js/app.219bf0d34dc38aec0b45.js></script></body></html>
